spacing fix

--- a/src/app/styles/spacing.scss
+++ b/src/app/styles/spacing.scss
@@ -1,4 +1,4 @@
-.spaced div, h4, h3, h2, h1, a, button {
+.spaced div, .spaced, h4, h3, h2, h1, a, button {
 
   > * + strong,
   > * + span,
